Add "AutoPagerize Wiki: Details of SITEINFO (ja)"

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
     <strong id="last_modified">Last Modified : </strong>
 
+    <h2>Data Scheme</h2>
+    <p>
+      <a href="http://autopagerize.jottit.com/details_of_siteinfo_%28ja%29">AutoPagerize Wiki: Details of SITEINFO (ja)</a><br>
+      Cf.) An issue <a href="https://github.com/wedata/AutoPagerize/issues/3#issuecomment-30013637">#3</a>
+    </p>
+
     <h2>Repository</h2>
     <p><a href="https://github.com/wedata/AutoPagerize">https://github.com/wedata/AutoPagerize</a></p>
   </body>
