Fix the domain name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>SITEINFOs for AutoPagerize</p>
 
     <h2>Database</h2>
-    <p><a href="http://wedata.github.com/AutoPagerize/items.json">http://wedata.github.com/AutoPagerize/items.json</a></p>
+    <p><a href="http://wedata.github.io/AutoPagerize/items.json">http://wedata.github.io/AutoPagerize/items.json</a></p>
 
     <strong id="last_modified">Last Modified : </strong>
 
